rfq-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: requester
          servicePort: 80
      - path: /admin
        backend:
          serviceName: admin-api
          servicePort: 80
